Launch Multi-File Source-Code Programs
https://bugs.openjdk.org/browse/JDK-8304400